Main part for collective monography appears.

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -99,3 +99,24 @@
 }
 
 
+@Book{mich_92,
+  author = {Михалёв, А. И.},
+  title = {Адаптивно-поисковые методы и алгоритмы оптимизации и идентификации динамических систем},
+  address = {Киев},
+  publisher = {НМК ВО},
+  year = 1992,
+  pagetotal = 68,
+  language = {russian}
+}
+
+
+@Book{adopt_cont_sys,
+  author = {Гачинский, Э. Е. and Дроздов, А. И. and Черкашин, М. Ю.},
+  title = {Адаптация в непрерывных системах автоматического поиска},
+  address = {М.},
+  publisher = {Наука},
+  year = 1991,
+  pagetotal = 128,
+  language = {russian}
+}
+
