--- a/atuworks.bib
+++ b/atuworks.bib
@@ -500,7 +500,7 @@
   pages = {141--146}
 }
 
-@Article{atu_kher2016,
+@Article{atu_ISDMCI2016,
   title = {Применение различных функций качества идентификации при использовании ансамбля поисковых агентов в задаче идентификации нелинейных динамических систем},
   xdata = {ISDMCI},
   author = atum,
