--- a/chua_testsys.tex
+++ b/chua_testsys.tex
@@ -6,7 +6,7 @@
  chua: ASAU-18, MKMM-2014, APIR-2011
 }
 
-Одной из известных хаотических систем, легко реализуемых как модельно,
+Одной из известных хаотических систем, легко реализуемых как модельно (\ref{atu:eq:chua}),
 так и схемотехнически (рис.~\ref{atu:f:chuascheme}),
 является нелинейная система Чуа~\cite{moon_chaotic_vibr,buga_chua}:
 
