--- a/colp_testsys.tex
+++ b/colp_testsys.tex
@@ -194,7 +194,10 @@ I_c =
 \[
   V_{cc} = \SI{12.06}{\volt},          \;
   R_1 = R_2 = \SI{2.2}{\kilo\ohm},     \;
-  R_e = \SI{430}{\ohm},                \;
+  R_e = \SI{430}{\ohm},
+\]
+
+\[
   C_1 = C_2 = \SI{1.03}{\micro\farad}, \;
   L = \SI{6.22}{\milli\henry},         \;
   T = \SI{305}{\kelvin},
@@ -202,9 +205,9 @@ I_c =
 
 \[
   \text{Q: 2N2222A}, \quad
-  h_{fe}=285, \quad
-  V_f = \SI{0.677}{\volt}, \quad
-  I_s = \SI{9.61e-14}{\ampere}, \quad
+  h_{fe}=285, \;
+  V_f = \SI{0.677}{\volt}, \;
+  I_s = \SI{9.61e-14}{\ampere}, \;
   \alpha \approx 1.
 \]
 
