--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -63,6 +63,26 @@
 
 \subsection*{Критерии идентификации}
 
+Как уже было отмечено, для успешности процесса идентификации необходимо
+существование интегрального критерия, зависящего (желательно наиболее простой зависимостью)
+от величины идентифицируемого параметра. Конкретный вид определяется самой идентифицируемой
+системой. При этом, довольно часто (но не всегда) в качестве основы для такого критерия выступает
+какая-либо энергетическая зависимость. С учётом усреднения на требуемом интервале,
+один из простых видов критерия может быть задан так:
+
+\begin{equation}
+\frac{dq_{x^2}}{dt}
+=
+\frac{1}{\tau} \left( x^2(t) - q_{x^2}(t) \right)
+,
+\label{atu:eq:q}
+\end{equation}
+
+\noindent
+где $\tau$ -- характерное время оценивания, $x(t)$ -- выбранная переменная состояния системы.
+Это далеко не единственный способ, но в данной работе будет использоваться именно он,
+и обозначения видов критерием будут основываться на (\ref{atu:eq:q}).
+
 \subsection*{Мультимодельные методы идентификации}
 
 Процесс поисковой идентификации заключается в настройке параметров одной
@@ -81,8 +101,9 @@
 
 В простейших случаях возможно построение системы идентификации
 и одной моделью, и соответственно одним агентом. % TODO: cite
-Примерами такого похода могут служить метод
-синхронного детектора и оригинальный адаптивно-поисковый метод.
+Примерами такого похода могут служить
+метод синхронного детектора \cite{adopt_cont_sys}
+и оригинальный адаптивно-поисковый метод \cite{mich_92}.
 Применение одномодельных методов требует определённого механизма
 сохранения истории процесса поиска, по крайней мере в пределах
 одного поискового ``периода''. Это сильно ограничивает диапазон
@@ -111,43 +132,67 @@ $ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
 
 Каждый агент, определяя величину $q_{mi}(t)$ , и получая $q_o(t)$,
 вычисляет безразмерную функцию качества идентификации.
-Наиболее распространённые виды таких функций:
+
+С учётом обозначения
+
+\[
+  q_r = \frac{q_o - q_m}{q_\gamma},
+\]
+
+\noindent
+представлены наиболее распространённые виды таких функций:
 
 \begin{equation}
-  F_i
-  =
-  F(q_o,q_{m_i})
-  =
-  \exp \left( - \left({\frac{q_o-q_{m_i}}{q_\gamma}} \right)^2 \right).
+  F_{\mathrm{gauss}} = \exp( - q_r^2 ),
 \label{atu:eq:F_gauss}
 \end{equation}
 
 \begin{equation}
-  F_i
-  =
-  F(q_o,q_{m_i})
-  =
-  \exp \left( - \frac{|q_o-q_{m_i}|}{q_\gamma}  \right).
-\label{atu:eq:F_modgauss}
+  F_{\mathrm{parabolic}} = 1 - q_r^2 \left( 1 - \frac{1}{e} \right),
+\label{atu:eq:F_parabolic}
+\end{equation}
+
+\begin{equation}
+  F_{\mathrm{triangle}} = 1 - |q_r| \left( 1 - \frac{1}{e} \right),
+\label{atu:eq:F_triangle}
+\end{equation}
+
+\begin{equation}
+  F_{\mathrm{hyper}} = \frac{1}{ 1 + |q_r| \left( 1 - \frac{1}{e} \right)},
+\label{atu:eq:F_hyper}
+\end{equation}
+
+\begin{equation}
+  F_{\mathrm{log}} = 1 - \ln \left( 1 + |q_r| \right) \frac{1-1/e}{\ln(2)}.
+\label{atu:eq:F_log}
 \end{equation}
 
 Для всех рассмотренных функций $q_\gamma$ -- величина, обратная чувствительности
-функции качества -- задаёт масштаб и рабочий диапазон функции качества.
+функции качества -- задаёт масштаб и рабочий диапазон функции качества (рис.~\ref{atu:f:F_types}).
+При этом, при необходимости, значения этих функций могут быть искусственно ограничены диапазоном $[0;1]$.
+Каждая имеет свой набор преимуществ и недостатков~\cite{atu_ISDMCI2016}. В данной работе будет использоваться
+функция (\ref{atu:eq:F_gauss}).
 
-Обозначим текущую модель индексом ``c'',
-предыдущую -- ``l'', и последующую -- ``r''. 
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=45\TW]{p/F_types.png} }
+  \caption{Функции качества идентификации (\ref{atu:eq:F_gauss})--(\ref{atu:eq:F_log})}
+  \label{atu:f:F_types}
+\end{figure}
 
-Для псевдомоделей считаем
-
-\[
-  F_{ll} = F_{rr} = 0.
-\]
+Рассмотрим случай, когда каждый агент взаимодействует с двумя своими ближайшими соседями,
+запрашивая у них величины $p$ -- текущее значение параметра и $F$.
+При анализе конкретного агента, для упрощения записи, его индекс $i$ обозначим как ``c'' (current),
+предыдущий получает индекс ``l'' (left), а последующий -- ``r'' (right).
+Для единообразия дополним множество моделей двумя неподвижными псевдомоделями (fake models),
+обозначив и индексами ``ll'' и ``rr''. Для псевдомоделей считаем $  F_{ll} = F_{rr} = 0$,
+а координаты выбираются за пределами рабочего диапазона поиска.
 
 
 Расмотрим 3 подхода к определению
-точки максимума функции качества, а следовательно -- значения идентифицируемого параметра.
+точки максимума функции качества, а следовательно -- значения идентифицируемого параметра \cite{atu_st99}.
 Первый -- реализация
-метода COG (Center of gravity), используемого при дефаззификации систем нечёткой логики:
+метода COG (Center of gravity, Такаги-Сугено) \cite{atu_asau25},
+используемого при дефаззификации систем нечёткой логики:
 
 \begin{equation}
   p_{ge}
@@ -319,11 +364,19 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 
 \subsection*{Выводы}
 
-Выводы.
-\label{e:atu}
+В целом, применение рассмотренных видов критериев, в совокупности
+с мультимодельными (мультиагентными) методами идентификации
+работоспособность для определённого класса сложных динамических систем.
+Полученные зависимости ошибок идентификации от параметров
+самой системы идентификации, с одной стороны, позволяют
+правильно настроить эти параметры для получения максимально быстрого
+и точного процесса идентификации. В другой стороны, эти зависимости
+подчёркивают связь свойств идентифицируемого объекта с
+требуемыми качествами системы идентификации.
 
 
 \printbibliography
+\label{e:atu}{~}
 
 \FloatBarrier
 
