--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -1,11 +1,7 @@
-\documentclass[a4paper,13pt,atutfonts]{cmonogra}
-
+\documentclass[a4paper,paratype,12pt,fouriernc]{cmonogra}
+% atutext dejavu droid paratype fouriernc
 
 \usepackage[verbose,dvips,a4paper,tmargin=20mm,bmargin=25mm,lmargin=20mm,rmargin=20mm,headsep=4pt,includeheadfoot]{geometry}
-
-%\usepackage{txfonts} % use before local fonts - only for math
-%\usepackage{amsfonts}
-%\usepackage{fouriernc}
 
 
 \input{commonsetup.tex}
@@ -38,8 +34,6 @@
 \pagestyle{stheadings}
 
 \begin{document}
-
-\sloppy
 
 \tableofcontents
 
