Use \od{}{}. title prefix

--- a/chua_testsys.tex
+++ b/chua_testsys.tex
@@ -153,7 +153,7 @@ $q_{*}(\mu) $, полученные путём моделирования
 % TODO: общие слова перенести к первой системе.
 Следующим важным параметром, необходимым для системы идентификации, является
 характерное время время оценивания $\tau$, или же обратная ему величина $a_q$,
-входящая в (). %TODO
+входящая в (\ref{atu:eq:q}).
 
 Для предварительного оценивания величины $a_q$ рассмотрим спектры системы при различных
 $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графиков, спектр системы достаточно
