--- a/defs.tex
+++ b/defs.tex
@@ -1,22 +1,22 @@
 % definitions for asau class
 
-\newcommand{\bookname}{``АСАУ''}
-\newcommand{\issn}{ISSN~1560-8956}
-\newcommand{\booknamefullu}{Адаптивні системи автоматичного управління}
-\newcommand{\booknamefullr}{Адаптивные системы автоматического управления}
-\newcommand{\booknamefulle}{Adaptive systems of automatic control}
-\newcommand{\booksubtitleu}{Міжвідомчий науково-технічний збірник}
-\newcommand{\booksubtitlee}{Interdepartmental scientific-technical journal}
+\newcommand{\bookname}{``Коллективная монография''}
+\newcommand{\issn}{~}
+\newcommand{\booknamefullu}{Коллективная монография}
+\newcommand{\booknamefullr}{Коллективная монография}
+\newcommand{\booknamefulle}{Коллективная монография}
+\newcommand{\booksubtitleu}{~}
+\newcommand{\booksubtitlee}{~}
 
 \newcommand{\KPIFULL}{Національний технічний університет України
 ``Київський політехнічний інститут''}
 \newcommand{\KPIFULLX}{Національний технічний університет України \par
 ``Київський політехнічний інститут''}
 
-\newcommand{\bookyear}{2015}
-\newcommand{\bookmajor}{27}
-\newcommand{\bookminor}{47}
-\newcommand{\bookinyear}{2}
+\newcommand{\bookyear}{2016}
+\newcommand{\bookmajor}{~}
+\newcommand{\bookminor}{~}
+\newcommand{\bookinyear}{~}
 
 %\newcommand{\bookinfo}{\bookyear~\No~\bookmajor{\small{(\bookminor)}}}
 %\newcommand{\booknumber}{\hbox{-- \bookmajor{\scriptsize{(\bookminor)}} }}
