--- a/fric_testsys.tex
+++ b/fric_testsys.tex
@@ -10,11 +10,10 @@
 которые, тем не менее, проявляют сходные свойства с точки зрения идентификации.
 А именно, непосредственное сравнение выходов системы и модели не позволяет
 сделать никаких выводов о соотношениях между параметрами модели о объекта.
-Одним из примеров является динамическая система, моделирующая поведение
-тела заданной массы по действием внешней вынуждающей силы
+Одним из примеров является динамическая система (\ref{atu:eq:dryfric_sys}),
+моделирующая поведение тела заданной массы по действием внешней вынуждающей силы
 и силы сухого трения
-\cite{berger_friction,atu_asau11}
-(\ref{atu:eq:dryfric_sys}):
+\cite{berger_friction,atu_asau11}:
 
 \begin{equation}
  m \ddot{x} + f( x, \dot{x}, \ldots)  = u(t).
@@ -97,7 +96,7 @@ $ f( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 Первые два требования
 могут быть достигнуты путём вычисления производной --
 скорости изменения выходных сигналов
-\(v = dx(t)/dt \),
+\(v = \mathrm{d}\,x(t)/ \mathrm{d}\,t \),
 и формирования критерия идентификации на её основе.
 
 Однако, при этом система становится исключительно чувствительной
