Add agent figure, more words in conclusion.

--- a/atuworks.bib
+++ b/atuworks.bib
@@ -20,6 +20,16 @@
   publisher = {ХНТУ},
 }
 
+@Article{atu_asau3,
+  title = {Сравнительный анализ алгоритмов поисковой идентификации нелинейных систем},
+  author = atum,
+  xdata = {asau},
+  language     = {russian},
+  langid       = {russian},
+  year = {2000},
+  pages = {99--108},
+  number = {3(23)}
+}
 
 @Article{atu_asau10,
   title = {Информационные оценки сложности задачи параметрической идентификации динамических систем},
