--- a/com_monog_atu.tex
+++ b/com_monog_atu.tex
@@ -4,7 +4,8 @@
 \usepackage[verbose,dvips,a4paper,tmargin=20mm,bmargin=25mm,lmargin=20mm,rmargin=20mm,headsep=4pt,includeheadfoot]{geometry}
 
 
-\input{commonsetup.tex}
+%\input{commonsetup.tex}
+\usepackage[backend=biber,sorting=none,maxnames=100,bibstyle=gost-numeric]{biblatex}
 
 \input{tikzsetup.tex}
 
@@ -34,11 +35,13 @@
 
 \pagestyle{stheadings}
 
+% ====================================================================================================
 \begin{document}
 
 \tableofcontents
 
 
+% ----------------------------------------------------------------------------------------------------
 \MonoArticle{atu}{Идентификация хаотических систем}{А.И.~Гуда, А.И.~Михалёв}{Гуда~А.И., Михалёв~А.И.}
 
 \subsection*{Введение}
@@ -84,18 +87,51 @@
 или нескольких моделей, анализу критериев идентификации
 (или соответствующих функций качества), и оцениванию по этой информации
 значения идентифицируемого параметра. При использовании в целях идентификации нескольких моделей,
-появляются общие действия, применяемые к каждой из них. Следовательно, имеет смысл ввести следующее определение:
+появляются общие действия, применяемые к каждой из них.
+
+Рассмотрим одномерный случай.
+Пусть задан объект $ \mathbf{O} $, и $N$ моделей:
+$ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
+На вход как объекта, так и каждой из моделей подаётся (при необходимости)
+входной сигнал $u(t)$. Выход моделей $x_{mi}(t)$ измеряется точно,
+а объекта $x_o(t)$ -- с определённой помехой $w(t)$. При необходимости искусственную помеху
+со сходными характеристиками можно подмешивать и выходу моделей.
+Обозначим $q_o(t)$ -- текущее значение критерия для
+объекта, $q_{mi}(t)$ -- для $i$-той модели.
+Соответственно $p_o(t)$ -- значение параметра для объекта,
+$p_{mi}(t)$ -- для модели номер $i$.
 
 
-\textbf{ Агент } -- совокупность модели, критерия идентификации,
-алгоритмов локального поиска и, может быть адаптации.
+Введём следующее определение:
 
-Как правило, один агент управляет одной моделью. При этом
+
+\textbf{ Агент } -- динамическая система, получающая выходной ($x(t)$),
+и, при необходимости входной сигнал ($u(t)$) одной или нескольких моделей,
+может быть информацию от других поисковых агентов,
+на основании оцененного критерия идентификации
+реализующая алгоритм настройки параметра модели (моделей)
+таким образом, что бы обеспечить идентификацию заданного параметра.
+
+Один агент может управлять как одной моделью (рис.~\ref{atu:f:agent1}),
+так и несколькими. При этом
 он может использовать информацию, как полученную как от других
 агентов, так и полученную в результате обработки данных от других агентов.
 
+\begin{figure}[htb!]
+\begin{center}
+\input{p/agent1.pgf}
+\end{center}
+\caption{Поисковый агент, настраивающий параметр одной модели}
+\label{atu:f:agent1}
+\end{figure}
+
+
+В случае, один агент настраивает несколько моделей,
+или/и если пространство параметров имеет больше размерность больше единицы,
+вместо простого индекса $i$ могут применяется составные.
+
 В простейших случаях возможно построение системы идентификации
-и одной моделью, и соответственно одним агентом. % TODO: cite
+и одной моделью, и соответственно одним агентом.
 Примерами такого похода могут служить
 метод синхронного детектора \cite{adopt_cont_sys}
 и оригинальный адаптивно-поисковый метод \cite{mich_92}.
@@ -105,7 +141,8 @@
 применимости данных методов, в первую очередь -- из-за значительных
 временных затрат на повторяющийся поиск.
 
-Применение пары моделей (в этом случае имеет смысл говорить об одном агенте)
+Применение пары моделей \cite{atu_asau3}
+(в этом случае имеет смысл говорить об одном агенте)
 позволяет с меньшими временными затратами оценить градиент функции качества,
 и, как следствие -- определить значение параметра. Также значительным плюсом
 такого подхода является меньшая скорость изменения параметров моделей.
@@ -115,18 +152,9 @@
 идентифицируемого параметра. Поэтому, применения множества
 поисковых агентов может кардинально уменьшить время идентификации.
 
-Рассмотрим одномерный случай.
-Пусть задан объект $ \mathbf{O} $, и $N$ моделей:
-$ \mathbf{M}_0 \ldots \mathbf{M}_{N-1} $.
-На вход как объекта, так и каждой из моделей подаётся (при необходимости)
-входной сигнал $u(t)$. Выход моделей $x_{mi}(t)$ измеряется точно,
-а объекта $x_o(t)$ -- с определённой помехой $w(t)$. При необходимости помеху
-со сходными характеристиками можно подмешивать и выходу моделей.
-Обозначим $q_o(t)$ -- текущее значение критерия для
-объекта, $q_{mi}(t)$ -- для $i$-той модели.
-
 Каждый агент, определяя величину $q_{mi}(t)$ , и получая $q_o(t)$,
-вычисляет безразмерную функцию качества идентификации.
+вычисляет безразмерную функцию качества идентификации
+$F(q_o,q_m)$.
 
 С учётом обозначения
 
@@ -276,7 +304,7 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 Динамика изменения параметров моделей (поисковых агентов) задаётся следующим образом:
 
 \begin{equation}
-  \frac{dp_c}{dt} = v_f f_t(t),
+  \od{p_c}{t} = v_f f_t(t),
   \label{atu:eq:dp_dt}
 \end{equation}
 
@@ -330,6 +358,10 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 при различной динамике изменения параметра, а также
 настроить параметры самой системы идентификации.
 
+Для моделирования как рассматриваемых идентифицируемых систем,
+так и динамики процессов идентификации использовалась разработанное
+программное средство ``qontrol''.
+
 
 \subsection*{Хаотические тестовые системы }
 
@@ -362,6 +394,29 @@ $i_m$ обозначим как $p_{ee}$ и будем считать
 В целом, применение рассмотренных видов критериев, в совокупности
 с мультимодельными (мультиагентными) методами идентификации
 работоспособность для определённого класса сложных динамических систем.
+
+
+
+Для каждой из рассмотренных систем удалось определить подходящий
+критерий качества. Для большинства из систем вид критерия
+был получен практически автоматически, из анализа полученных
+в результате моделирования зависимостей, имеющих прямое или косвенное отношение
+к энергетическим параметрам. Для системы с сухим трением,
+синтез критерия был основан на явных физических зависимостях.
+Созданные критерии позволяют реализовать процесс идентификации для случаев
+сложной или же хаотической динамики,
+когда полностью отсутствуют хоть какая-нибудь информация о
+трендовом поведении объекта, и невозможно получить аналитическую
+или же статистическую связь между параметрами и выходом системы.
+
+Одновременная настройка параметров нескольких моделей ансамблем поисковых агентов
+позволила максимально преодолеть противоречие между скоростью и точностью
+идентификации. В этом методе время идентификации определяется
+временем реакции идентифицируемой системы на изменение параметра.
+Для систем со сложной, а тем более хаотической динамикой это время достигает
+значительных величин, по сравнению с характерными временами самой динамики системы.
+
+
 Полученные зависимости ошибок идентификации от параметров
 самой системы идентификации, с одной стороны, позволяют
 правильно настроить эти параметры для получения максимально быстрого
