--- a/commonsetup.tex
+++ b/commonsetup.tex
@@ -1,11 +1,6 @@
 
-\usepackage[backend=biber,sorting=none,maxnames=100,bibstyle=gost-numeric]{biblatex}
+% \usepackage[backend=biber,sorting=none,maxnames=100,bibstyle=gost-numeric]{biblatex}
 
-
-\usetikzlibrary{arrows}
-\usetikzlibrary{patterns}
-
-\usepackage[europeanresistors,americaninductors,siunitx,fulldiodes]{circuitikz}
 
 
 
