Pull agent1.pgf from tests.

--- a/tst/1/t1.tex
+++ b/tst/1/t1.tex
@@ -38,6 +38,8 @@
 \title{Tikz figures test}
 \author{А.И.~Гуда}
 
+% \tikzexternalize % requires pdflatex -shell-escape
+
 \begin{document}
 
 \begin{center}
