--- a/tikzsetup.tex
+++ b/tikzsetup.tex
@@ -5,15 +5,22 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{patterns}
 %\usepgflibrary{shapes.geometric}
+\usetikzlibrary{external}
+
+
+\definecolor{haircolor}{rgb}{0.7,0.7,1.0}
+\newcommand{\TikzAddPadding}{\path (current bounding box.north east) ++(+0.1,+0.1); \path (current bounding box.south west) ++(-0.1,-0.1);}
 
 \tikzset{
   >=stealth,
   %semiRed/.style={fill=red,opacity=0.3,draw=black,thin},
+  hair/.style={draw,color=haircolor,line width=0.1pt},
   medline/.style={draw=black,line width=0.6pt},
   medlinep/.style={draw=black,line width=0.6pt,->},
   semiboldline/.style={draw=black,line width=1.2pt},
   boldline/.style={draw=black,line width=2.0pt},
   wire/.style={draw=black,line width=1.0pt},
-  elelem/.style={draw=black,line width=1.5pt}
+  elelem/.style={draw=black,line width=1.5pt},
+  subelem/.style={draw=black,dashed,line width=0.6pt}
 }
 
