Big figure in test (N models), small fixes.

--- a/tikzsetup.tex
+++ b/tikzsetup.tex
@@ -18,6 +18,8 @@
   medline/.style={draw=black,line width=0.6pt},
   medlinep/.style={draw=black,line width=0.6pt,->},
   semiboldline/.style={draw=black,line width=1.2pt},
+  semiboldlinep/.style={draw=black,line width=1.2pt,->},
+  infoline/.style={draw=gray,line width=1.4pt},
   boldline/.style={draw=black,line width=2.0pt},
   wire/.style={draw=black,line width=1.0pt},
   elelem/.style={draw=black,line width=1.5pt},
