--- a/duff_testsys.tex
+++ b/duff_testsys.tex
@@ -7,12 +7,12 @@
 }
 
 \begin{equation}
- \ddot{x} + c_0 \dot{x} + \Omega_0^2 x + \beta x^3 = u(t) ,
+ \ddot{x} - c_0 \dot{x} + \Omega_0^2 x + \beta x^3 = u(t) ,
 \label{atu:eq:duff}
 \end{equation}
 
 \begin{equation}
- m \ddot{x} + \nu \dot{x} + k_1 x + k_3 x^3 = F(t) ,
+ m \ddot{x} - \nu \dot{x} + k_1 x + k_3 x^3 = F(t) ,
 \label{atu:eq:duff_phys}
 \end{equation}
 
